--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-Boilerplate code to use for React apps.
+A very basic weather app using React.js
+
+Following the Udemy React+Redux course
+[Course Link](https://www.udemy.com/the-complete-react-web-app-developer-course/)
